# minimal_enzymead

./: CMakeLists.txt  LICENSE  README.md  build.sh
src/: CMakeLists.txt  main.cpp
